tests/sksl/errors/ForLoopOverflow.glsl
### Compilation failed:

error: 3: loop must guarantee termination in fewer iterations
    for (int i = 2147483640; i < 2147483647; i += 100) {
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
1 error
